--- a/login/style.css
+++ b/login/style.css
@@ -5,32 +5,37 @@
 }
 
 .title{
-    display: flex;
-    justify-content: center;
+    text-align: center;
 
-}
-li{
-    list-style: none;
 }
 
 .main{
     width: 30%;
     height: 350px;
-    background-color: green;
-
+    background-image: linear-gradient(rgb(2, 46, 2), rgb(11, 131, 11));
+    margin: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
-.main{
-    margin: auto;
-
+.main form{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 100%;
+    width: 100%;
 }
 
 input{
     font-size: 18px;
     width: 350px;
+    height: 50px;
     text-align: center;
     display: block;
     margin: auto;
+    border-radius: 20px;
 }
 
 
