--- a/tampil/style.css
+++ b/tampil/style.css
@@ -27,6 +27,7 @@
     margin: auto;
     line-height: 30px;
     padding: 20px;
+    /* display: none; */
 }
 .edit{
     width: 100px;
@@ -50,4 +51,13 @@ a{
     color: white;
     background-color: #1d1d1d;
     text-decoration: none;
+}
+
+.container{
+    width: 700px;
+    margin: auto;
+}
+
+.image{
+    width: 100%;
 }
