--- a/status/status.css
+++ b/status/status.css
@@ -27,9 +27,71 @@ body{
     /* margin-bottom: 10vh; */
 }
 
+/* HAMBURGER START */
 span{
     color: #7a7a7a;
 }
+/* HAMBURGER */
+a#hamburger{
+    position: relative;
+    cursor: pointer;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    /* background-color: #fff; */
+}
+
+a#hamburger span {
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    background-color: #fff;
+    transition: 0.2s all ease;
+}
+
+a#hamburger span:nth-child(1) {
+    transform: translateY(-12px);
+}
+
+a#hamburger span:nth-child(2) {
+    transform: translateY(12px);
+}
+
+a#hamburger:hover span:nth-child(1) {
+    transform: translateY(-17px);
+}
+
+a#hamburger:hover span:nth-child(2) {
+    transform: translateY(17px);
+}
+
+/* active */
+a#hamburger.active span:nth-child(1) {
+    transform: translateY(-50px);
+    opacity: 0;
+}
+
+a#hamburger.active span:nth-child(2) {
+    transform: translateY(50px);
+    opacity: 0;
+}
+
+a#hamburger span:nth-child(3),
+a#hamburger span:nth-child(4) {
+    transform: rotate(0deg);
+}
+
+a#hamburger.active span:nth-child(3) {
+    transform: rotate(-45deg);
+}
+
+a#hamburger.active span:nth-child(4) {
+    transform: rotate(45deg);
+}
+
+/* HAMBURGER END */
 
 .nav{
     margin-left: 30vw;
